avia and hk camera test sync ok

--- a/livox_ros_driver/CMakeLists.txt
+++ b/livox_ros_driver/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 cmake_minimum_required(VERSION 3.0)
 
-set(PYTHON_EXECUTABLE /usr/bin/python3)
+set(PYTHON_EXECUTABLE /usr/bin/python)
 #---------------------------------------------------------------------------------------
 # Start livox_ros_driver project
 #---------------------------------------------------------------------------------------
