--- a/mvs_ros_pkg/config/left_camera_trigger.yaml
+++ b/mvs_ros_pkg/config/left_camera_trigger.yaml
@@ -4,9 +4,9 @@
 # Camera Parameters. Adjust them!
 #--------------------------------------------------------------------------------------------
 
-SerialNumber: "00G66398256" # "00G66398256" # "00G79916803"
+SerialNumber: "DA0976362" # "00G66398256" # "00G79916803"
 CameraName: "left"
-TopicName: "left_camera/image"
+TopicName: "/hk_camera/image_color"
 # Exposure Auto, 0 stands for Off, 1 stands for Once, 2 stands for Continues
 # ExposureAuto: 0                                                                                                                                                                                                                                                                                                                                                                                                                                  
 # ExposureAutoMode: 0
@@ -14,18 +14,19 @@ TopicName: "left_camera/image"
 # ExposureTime: 20000
 # 
 # ExposureAuto: 2  
-ExposureAuto: 0
-ExposureTime: 2000
+ExposureAuto: 2
+ExposureTime: 1000
 
 # ExposureAutoMode: 2
 # ExposureAuto: 2
 # AutoExposureTimeLower: 100
 # AutoExposureTimeUpper: 20000 #10000
 
-resize_divide: 0.5
+Binning: 4  # use 
+resize_divide: 1 # not use
 CenterAlign: 1
 # Gain Auto, 0 stands for Off, 1 stands for Once, 2 stands for Continues
-GainAuto: 2
+GainAuto: 1
 # Gain: 15  # min: 0   max: 17.0166
 Gain: 15 # min: 0   max: 17.0166
 # Gamma: 0.7  # min: 0   max: 17.0166
@@ -33,5 +34,21 @@ Gain: 15 # min: 0   max: 17.0166
 # GammaEnable: 1
 GammaSelector: 1 # 0 stands for user, 1 stands for sRGB, 2 
 Gamma: 0.7
-path_for_time_stamp: "/home/aa/timeshare"
+path_for_time_stamp: "/home/timeshare"
 
+
+Camera_info_topic_name: "/hk_camera_info"
+
+cam_model: Pinhole
+cam_width: 612
+cam_height: 512
+
+# 平均值
+cam_fx: 625.0441867
+cam_fy: 625.8058200
+cam_cx: 302.6309133
+cam_cy: 246.7821367
+cam_d0: -0.114957667 
+cam_d1: 0.2112790000 
+cam_d2: -0.000874000 
+cam_d3: -0.001598667 
